[package]
name = "see"
version = "0.1.0"
edition = "2024"
description = "A high-performance, asynchronous runtime-agnostic alternative to tokio::sync::watch"
readme = "README.md"
repository = "https://github.com/compio-rs/see"
license = "MIT OR Apache-2.0"
keywords = ["async", "channel", "runtime-agnostic", "synchronization", "watch"]
categories = ["asynchronous", "concurrency"]

[[bench]]
harness = false
name = "comparison"

[dependencies]
criterion = { version = "0.7.0", features = ["async_tokio", "html_reports"] }
event-listener = "5.4.1"
local-event = "0.1.1"
parking_lot = "0.12.5"
thiserror = "2.0.17"

[dev-dependencies]
smol = "2.0.2"
compio = { version = "0.16.0", features = ["macros", "time"] }
tokio = { version = "1.48.0", features = ["full"] }
